add optional message

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@
             </div>
         </div>
         <div class="col-md-6">
-            <label for="crop_width" class="form-label">Crop Width</label>
+            <label for="crop_width" class="form-label">Crop Width (Optional)</label>
             <input type="number" name="crop_width" class="form-control" id="crop_width">
         </div>
         <div class="col-md-6">
-            <label for="crop_height" class="form-label">Crop Height</label>
+            <label for="crop_height" class="form-label">Crop Height (Optional)</label>
             <input type="number" name="crop_height" class="form-control" id="crop_height">
         </div>
         <div class="col-12 mt-4">
